# numpy-rl-racer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
logs/no-idle/: training_log.csv
models/: best_model.npz  config.json  final_model.npz
models/no-idle/: best_model.npz  config.json  final_model.npz
scripts/: benchmark_v0.py  compare_policies.py  demo_render_env.py  evaluate.py  generate_env_diagram.py  grid_search.py  preview_tracks.py  train.py  train_reinforce.py
src/numpy_rl_racer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/numpy_rl_racer/agent/: __init__.py  dqn.py  reinforce.py
src/numpy_rl_racer/env/: __init__.py  car.py  racing_env.py  utils.py  wrappers.py
src/numpy_rl_racer/network/: __init__.py  network.py
src/numpy_rl_racer/rendering/: __init__.py  matplotlib_renderer.py
src/numpy_rl_racer/utils/: __init__.py  logging.py  scheduler.py
tests/: test_benchmark_v0.py  test_car.py  test_checkpoint.py  test_dqn.py  test_logging.py  test_network.py  test_package.py  test_racing_env.py  test_reinforce.py  test_renderer.py  test_scripts.py  test_utils.py  test_wrappers.py
