[project]
name = "numpy-rl-racer"
version = "0.1.0"
description = "A NumPy-only Deep RL racing environment and agent from scratch."
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "matplotlib>=3.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
